--- a/Lab01/CloudFormation/0-VPC.yml
+++ b/Lab01/CloudFormation/0-VPC.yml
@@ -1,6 +1,7 @@
 AWSTemplateFormatVersion: "2010-09-09"
 
-Description: ''
+Description: 'Network Stack.'
+
 Parameters:
   VPCName:
     Description: The name of the VPC being created.
@@ -54,13 +55,10 @@ Resources:
             - - !Ref VPCName
               - -public-
 
-
-
   PrivateSubnet0:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
-
       CidrBlock: !FindInMap
         - SubnetConfig
         - Private0
@@ -125,54 +123,6 @@ Resources:
       SubnetId: !Ref PublicSubnet0
       RouteTableId: !Ref PublicRouteTable
 
-  PublicNetworkAcl:
-    Type: AWS::EC2::NetworkAcl
-    Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Application
-          Value: !Ref AWS::StackName
-        - Key: Network
-          Value: Public
-        - Key: Name
-          Value: !Join
-            - ""
-            - - !Ref VPCName
-              - -public-nacl
-
-  InboundAllowAllNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      NetworkAclId: !Ref PublicNetworkAcl
-      RuleNumber: "100"
-      Protocol: "-1"
-      RuleAction: allow
-      Egress: "false"
-      CidrBlock: 0.0.0.0/0
-      PortRange:
-        From: "0"
-        To: "65535"
-
-  OutboundAllowAllNetworkAclEntry:
-    Type: AWS::EC2::NetworkAclEntry
-    Properties:
-      NetworkAclId: !Ref PublicNetworkAcl
-      RuleNumber: "100"
-      Protocol: "-1"
-      RuleAction: allow
-      Egress: "true"
-      CidrBlock: 0.0.0.0/0
-      PortRange:
-        From: "0"
-        To: "65535"
-
-  PublicSubnetNetworkAclAssociation0:
-    Type: AWS::EC2::SubnetNetworkAclAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnet0
-      NetworkAclId: !Ref PublicNetworkAcl
-
-
   ElasticIP0:
     Type: AWS::EC2::EIP
     Properties:
@@ -195,7 +145,6 @@ Resources:
             - - !Ref VPCName
               - -private-route-table-0
 
-
   PrivateRouteToInternet0:
     Type: AWS::EC2::Route
     Properties:
@@ -203,13 +152,11 @@ Resources:
       DestinationCidrBlock: 0.0.0.0/0
       NatGatewayId: !Ref NATGateway0
 
-
   PrivateSubnetRouteTableAssociation0:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PrivateSubnet0
       RouteTableId: !Ref PrivateRouteTable0
-
 
 Outputs:
   VPCId:
@@ -224,15 +171,8 @@ Outputs:
     Export:
       Name: !Sub ${AWS::Region}-${AWS::StackName}-PublicSubnet0
 
-
   PrivateSubnet0:
     Description: SubnetId of private subnet 0
     Value: !Ref PrivateSubnet0
     Export:
       Name: !Sub ${AWS::Region}-${AWS::StackName}-PrivateSubnet0
-
-  DefaultSecurityGroup:
-    Description: DefaultSecurityGroup Id
-    Value: !GetAtt VPC.DefaultSecurityGroup
-    Export:
-      Name: !Sub ${AWS::Region}-${AWS::StackName}-DefaultSecurityGroup
