--- a/Lab01/CloudFormation/3-private-route-table.yaml
+++ b/Lab01/CloudFormation/3-private-route-table.yaml
@@ -23,10 +23,7 @@ Resources:
       VpcId: !Ref VPCId
       Tags:
         - Key: Name
-          Value: !Join
-            - ""
-            - - !Ref VPCId
-              - -private-route-table-0
+          Value: !Join ["-",[!Ref VPCId,private-route-table-0]]
   PrivateRouteToInternet0:
     Type: AWS::EC2::Route
     Properties:
