--- a/Lab01/CloudFormation/4-ec2.yml
+++ b/Lab01/CloudFormation/4-ec2.yml
@@ -17,7 +17,8 @@ Parameters:
     Type: 'String'
     MinLength: '1'
     MaxLength: '4096'
-    ConstraintDescription: 'Must be a valid private key with a length between 1 and 4096 characters.'
+    AllowedPattern: '^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/][AQgw]==|[A-Za-z0-9+/]{2}[AEIMQUYcgkosw048]=)?$'
+    ConstraintDescription: 'Must be a valid SSH private key in PEM format using base64 encoded.'
     NoEcho: 'true'
   KeyName:
     Description: 'The name of an existing EC2 KeyPair to enable SSH access to the instance. This KeyPair must already exist in the AWS region.'
@@ -100,9 +101,10 @@ Resources:
       UserData: !Base64
         Fn::Sub: |-
           #!/bin/bash
-          echo ${sshPrivateKey} > /home/ec2-user/.ssh/key.pem
+          base64 -d <<< ${sshPrivateKey} > /home/ec2-user/.ssh/key.pem
           mkdir -p /home/ec2-user/.ssh
           chmod 400 /home/ec2-user/.ssh/key.pem
+          chown ec2-user:ec2-user /home/ec2-user/.ssh/key.pem
           /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource Instance --region ${AWS::Region}
       Tags:
         - Key: Lab01
