--- a/Lab01/CloudFormation/main.yml
+++ b/Lab01/CloudFormation/main.yml
@@ -3,6 +3,14 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >-
   Root stack that creates the VPC, NAT Gateway, Route Tables, Security Groups, and EC2 Instances.
 Parameters:
+  AllowSSHIP:
+    Description: 'The IP address range that is allowed to SSH into the EC2 instances. This should be in CIDR notation (e.g., 0.0.0.0/0 for all IPs).'
+    Type: String
+    Default: 118.68.53.42/32
+    MinLength: 9
+    MaxLength: 18
+    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
+    ConstraintDescription: 'Must be a valid IP CIDR range of the form x.x.x.x/x.'
   BucketName:
     Description: The name of the S3 bucket
     Type: String
@@ -82,6 +90,7 @@ Resources:
       TemplateURL: !Sub https://${BucketName}.s3.amazonaws.com/1-security.yml
       Parameters:
         VPC: !GetAtt VPCStack.Outputs.VPCId
+        AllowSSHIP: !Ref AllowSSHIP
   PublicRouteTableStack:
     Type: AWS::CloudFormation::Stack
     DependsOn: [VPCStack]
