config: Fix kafka configuration

--- a/lab02/microservices/auth-svc/compose.yaml
+++ b/lab02/microservices/auth-svc/compose.yaml
@@ -2,20 +2,21 @@ name: auth-svc-dev
 services:
   auth-svc-db:
     container_name: share-db
+    profiles: ['dev','all']
     image: "bitnami/postgresql:16.4.0-debian-12-r23"
     entrypoint:
       - sh
       - -euc
       - |
         cat <<EOF > /docker-entrypoint-initdb.d/init-dev-user.sql
-        create role "auth-svc-user" with password 'auth-svc-user-password' ; 
-        create database "auth-svc-db" with owner  "auth-svc-user";
+        create role "dev" with password 'dev' ; 
+        create database "auth-svc-db" with owner  "dev";
         grant connect to "auth-svc-user";
-        alter role "auth-svc-user" with login; 
+        alter role "dev" with login; 
         EOF
         /opt/bitnami/scripts/postgresql/entrypoint.sh /opt/bitnami/scripts/postgresql/run.sh
     ports:
-      - "5432"
+      - "5432:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -24,6 +25,7 @@ services:
       - postgres-data:/var/lib/postgresql/data
   zookeeper:
     container_name: zookeeper
+    profiles: ['dev','all']
     networks:
       - yamp-network
     image: confluentinc/cp-zookeeper:7.4.6
@@ -32,12 +34,11 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - "2181"
-  kafka:
+  kafka-svc:
     restart: unless-stopped
+    profiles: ['dev','all']
     networks:
      - yamp-network
-    container_name: kafka
-    hostname: kafka-svc
     image: confluentinc/cp-kafka:7.4.6
     depends_on:
       - zookeeper
@@ -51,6 +52,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
   auth-svc:
+    profiles: ['all']
     container_name: auth-svc
     image: ghcr.io/ngodat0103/nt548/auth-svc:${TAG:-dev-latest}
     build:
@@ -61,13 +63,12 @@ services:
         SERVICE_PORT: 8001
     depends_on:
       - auth-svc-db
-      - kafka
+      - kafka-svc
     environment:
       - SPRING_PROFILES_ACTIVE=local-dev
       - SPRING_DATASOURCE_URL=jdbc:postgresql://auth-svc-db:5432/auth-svc-db
-      - SPRING_DATASOURCE_USERNAME=auth-svc-user
-      - SPRING_DATASOURCE_PASSWORD=auth-svc-user-password
-      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka-svc:9092
+      - SPRING_DATASOURCE_USERNAME=dev
+      - SPRING_DATASOURCE_PASSWORD=dev
 volumes:
   postgres-data:
     name: auth-svc-db-volume
