feat(docker): Enhance Docker Compose with Zookeeper volumes and healthcheck
- Added persistent volumes for Zookeeper data and log.
- Implemented healthcheck for auth-svc.
- Updated service dependencies to ensure proper startup order.
Related issue: dev (issue #)

--- a/lab02/microservices/auth-svc/compose.yaml
+++ b/lab02/microservices/auth-svc/compose.yaml
@@ -26,6 +26,9 @@ services:
   zookeeper:
     container_name: zookeeper
     profiles: ['dev','all']
+    volumes:
+      - var-lib-zookeeper-data:/var/lib/zookeeper/data
+      - var-lib-zookeeper-log:/var/lib/zookeeper/log
     networks:
       - yamp-network
     image: confluentinc/cp-zookeeper:7.4.6
@@ -41,7 +44,8 @@ services:
      - yamp-network
     image: confluentinc/cp-kafka:7.4.6
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_started
     ports:
       - "9092"
     environment:
@@ -55,6 +59,12 @@ services:
     profiles: ['all']
     container_name: auth-svc
     image: ghcr.io/ngodat0103/nt548/auth-svc:${TAG:-dev-latest}
+    healthcheck:
+      test: ['CMD','curl','http://127.0.0.1:8001/api/v1/auth/actuator/health/liveness']
+      interval: 10s
+      retries: 5
+
+
     build:
       dockerfile: Dockerfile
       args:
@@ -62,16 +72,19 @@ services:
         VERSION: ${TAG:-dev-latest}
         SERVICE_PORT: 8001
     depends_on:
-      - auth-svc-db
-      - kafka-svc
+      auth-svc-db:
+        condition: service_started
+      kafka-svc:
+        condition: service_started
     environment:
       - SPRING_PROFILES_ACTIVE=local-dev
       - SPRING_DATASOURCE_URL=jdbc:postgresql://auth-svc-db:5432/auth-svc-db
       - SPRING_DATASOURCE_USERNAME=dev
       - SPRING_DATASOURCE_PASSWORD=dev
 volumes:
+  var-lib-zookeeper-data:
+  var-lib-zookeeper-log:
   postgres-data:
-    name: auth-svc-db-volume
 networks:
   yamp-network:
     name: yamp-dev
