--- a/lab02/microservices/auth-svc/compose.yaml
+++ b/lab02/microservices/auth-svc/compose.yaml
@@ -1,7 +1,5 @@
-name: auth-svc-dev
 services:
   auth-svc-db:
-    container_name: share-db
     profiles: ['dev','all']
     image: "bitnami/postgresql:16.4.0-debian-12-r23"
     entrypoint:
@@ -24,7 +22,6 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
   zookeeper:
-    container_name: zookeeper
     profiles: ['dev','all']
     volumes:
       - var-lib-zookeeper-data:/var/lib/zookeeper/data
@@ -83,7 +80,9 @@ services:
       - SPRING_DATASOURCE_PASSWORD=dev
 volumes:
   var-lib-zookeeper-data:
+    external: true
   var-lib-zookeeper-log:
+    external: true
   postgres-data:
 networks:
   yamp-network:
