--- a/lab02/microservices/user-svc/pom.xml
+++ b/lab02/microservices/user-svc/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.3.4</version>
+        <relativePath/>
     </parent>
     <groupId>com.github.ngodat0103.yamp</groupId>
     <artifactId>user-svc</artifactId>
@@ -103,10 +104,6 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-stream-test-binder</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.kafka</groupId>
