--- a/lab02/app/user-svc/compose.yaml
+++ b/lab02/app/user-svc/compose.yaml
@@ -1,36 +1,32 @@
-name: se347-backend
+name: se347-user-svc
 services:
-  kafka-console:
-    extends:
-      file: ../compose.yaml
-      service: kafka-console
-  kafka:
-    extends:
-      file: ../compose.yaml
-      service: kafka
-  zookeeper:
-    extends:
-      file: ../compose.yaml
-      service: zookeeper
-  redis:
-    image: redis:alpine3.20
-    ports:
-      - "6379:6379"
-    networks: [dev]
+#  kafka-console:
+#    extends:
+#      file: ../compose.yaml
+#      service: kafka-console
+#  kafka:
+#    extends:
+#      file: ../compose.yaml
+#      service: kafka
+#  zookeeper:
+#    extends:
+#      file: ../compose.yaml
+#      service: zookeeper
+
   mongo-primary:
     profiles: ['dev','all']
     image: bitnami/mongodb:8.0.3-debian-12-r1
     container_name: mongo-primary
     environment:
       - MONGODB_REPLICA_SET_MODE=primary
-      - MONGODB_REPLICA_SET_KEY=replicaSetKey123
+      - MONGODB_REPLICA_SET_KEY=KhzoN7sB64kze
+      - MONGODB_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD:-root}
+      - MONGODB_ROOT_USER=${MONGODB_ROOT_USER:-root}
+      - MONGODB_USERNAME=${MONGODB_USERNAME:-dev}
+      - MONGODB_PASSWORD=${MONGODB_PASSWORD:-dev}
       - MONGODB_DATABASE=${MONGODB_DATABASE:-user-svc}
       - MONGODB_REPLICA_SET_NAME=rs0
       - MONGODB_PORT_NUMBER=27017
-      - mongodb_root_password=${mongodb_root_password:-root}
-      - mongodb_root_user=${mongodb_root_user:-root}
-      - mongodb_username=${mongodb_username:-dev}
-      - mongodb_password=${mongodb_password:-dev}
     ports:
       - "27017:27017"
     networks: [dev]
@@ -38,7 +34,7 @@ services:
     profiles: ['all']
     image: ${TAG:-ghcr.io/ngodat0103/se347-backend/user-svc:dev-latest}
     environment:
-      - SPRING_KAFKA_PRODUCER_BOOTSTRAP_SERVERS=kafka:29092
+      - SPRING_KAFKA_BOOTSTRAP_SERVERS=kafka:29092
       - SPRING_DATA_MONGODB_HOST=mongo-primary
       - SPRING_DATA_MONGODB_USERNAME=${MONGODB_USERNAME:-dev}
       - SPRING_DATA_MONGODB_PASSWORD=${MONGODB_PASSWORD:-dev}
@@ -46,6 +42,7 @@ services:
       - APP_VERSION=${TAG:-dev-latest}
       - SPRING_PROFILES_ACTIVE=staging
       - SPRING_DATA_REDIS_HOST=redis
+      - SPRING_ELASTICSEARCH_URIS=http://elastic-search:9200
     build:
       context: .
       dockerfile: Dockerfile
@@ -60,19 +57,14 @@ services:
      timeout: 3s
      retries: 3
     depends_on:
-      kafka:
-        condition: service_started
       mongo-primary:
         condition: service_started
     ports:
       - "5000:5000"
 volumes:
-  var-lib-zookeeper-data:
-    name: var-lib-zookeeper-data
-    external: true
   bitnami-mongodb:
     name: bitnami-mongodb
 networks:
   dev:
     name: dev
-    driver: bridge
+    external: true
