--- a/lab02/deployment/kubernetes/helm/user-svc/templates/secret/external-secret.yaml
+++ b/lab02/deployment/kubernetes/helm/user-svc/templates/secret/external-secret.yaml
@@ -11,18 +11,18 @@ spec:
     name: {{ include "user-svc.fullname" . }}-secret-store
     kind: SecretStore
   target:
-    name: {{.Values.secretRef.name}}
+    name: {{ .Values.secretRef.name }}
   data:
-    - secretKey: MONGODB_ROOT_PASSWORD
+    - secretKey: mongodb-passwords
       remoteRef:
         key: se347/backend/dev/user-svc
-        property: MONGODB_ROOT_PASSWORD
-    - secretKey: MONGODB_USERNAME
+        property: mongodb-passwords
+    - secretKey: mongodb-replica-set-key
       remoteRef:
         key: se347/backend/dev/user-svc
-        property: MONGODB_USERNAME
-    - secretKey: MONGODB_PASSWORD
+        property: mongodb-replica-set-key
+    - secretKey: mongodb-root-password
       remoteRef:
         key: se347/backend/dev/user-svc
-        property: MONGODB_PASSWORD
+        property: mongodb-root-password
 {{- end }}
