--- a/lab02/app/user-svc/compose.yaml
+++ b/lab02/app/user-svc/compose.yaml
@@ -19,7 +19,7 @@ services:
     container_name: mongo-primary
     environment:
       - MONGODB_REPLICA_SET_MODE=primary
-      - MONGODB_REPLICA_SET_KEY=KhzoN7sB64kze
+      - MONGODB_REPLICA_SET_KEY=replicaSetKey123
       - MONGODB_ROOT_PASSWORD=${MONGODB_ROOT_PASSWORD:-root}
       - MONGODB_ROOT_USER=${MONGODB_ROOT_USER:-root}
       - MONGODB_USERNAME=${MONGODB_USERNAME:-dev}
@@ -52,7 +52,7 @@ services:
         VERSION: ${TAG:-dev-latest}
     networks: [ dev ]
     healthcheck:
-     test: ["CMD","curl","http://localhost:5000/actuator/health"]
+     test: ["CMD","curl","http://localhost:5000/actuator/health/readiness"]
      interval: 3s
      timeout: 3s
      retries: 3
