--- a/lab02/app/user-svc/pom.xml
+++ b/lab02/app/user-svc/pom.xml
@@ -31,7 +31,7 @@
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<springdoc.version>2.7.0</springdoc.version>
 		<spring-cloud.version>2023.0.3</spring-cloud.version>
-		<sonar.host.url>${SONAR_HOST}</sonar.host.url>
+		<sonar.host.url>${SONAR_HOST_URL}</sonar.host.url>
 		<sonar.token>${SONAR_TOKEN}</sonar.token>
 		<sonar.projectKey>se347-backend</sonar.projectKey>
 		<sonar.sources>${project.basedir}/src/main</sonar.sources>
